--- a/index.html
+++ b/index.html
@@ -11,16 +11,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <button id="btn-teste">Botao de teste</button>
+        <div>TODO write content</div>
 
-
-        <script>
-            var nome = 'ausehausheuahse';
-            console.log(nome);
-
-
-
-        </script>
-
-        <div>Ttolo</div>
+        <script src="assets/js/evento1.js"></script>
     </body>
 </html>
