Aula de eventos

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <button id="btn-teste">Botao de teste</button>
+        <input id="input-focus" type="text" >
         <div>TODO write content</div>
 
         <script src="assets/js/evento1.js"></script>
