--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@ and open the template in the editor.
         <div>TODO write content</div>
 
         <script src="assets/js/evento1.js"></script>
+        <script src="assets/js/arrays.js"></script>
     </body>
 </html>
