--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@ and open the template in the editor.
 
         <script src="assets/js/evento1.js"></script>
         <script src="assets/js/arrays.js"></script>
+        <script src="assets/js/condicionais.js"></script>
+
     </body>
 </html>
